# Video-streaming-with-RUST

./: Cargo.toml  index.html  style.css
src/: main.rs
src/components/: consumer.rs  mod.rs  producer.rs  videoChunksProvider.rs
