[package]
name = "Video-streaming-with-RUST"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"

[dependencies.web-sys] 
version = "0.3.60"
features = [
    "console",
    "CanvasRenderingContext2d",
    "EncodedVideoChunk",
    "EncodedVideoChunkInit",
    "EncodedVideoChunkType",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamTrack",
    "MediaTrackSettings",
    "MediaStreamTrackProcessor",
    "MediaStreamTrackProcessorInit",
    "HtmlVideoElement",
    "MediaStreamConstraints",
    "ReadableStream",
    "ReadableStreamGetReaderOptions",
    "ReadableStreamDefaultReader",
    "VideoEncoder",
    "VideoEncoderInit",
    "VideoEncoderConfig",
    "VideoFrame",
    "VideoTrack",
    "VideoDecoder",
    "VideoDecoderConfig",
    "VideoDecoderInit"
]

# [patch.crates-io] 
# web-sys = { path = "../wasm-bindgen/crates/web-sys"}
# js-sys = { path = "../wasm-bindgen/crates/js-sys"}
# web-bindgen = { path = "../wasm-bindgen/"}
# web-bindgen-futures = {path = "../wasm-bindgen/crates/futures"}
